Details
-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
Qt Creator 4.5.0-beta1
-
None
-
Linux Fedora 26
Description
In the "Navigator" it should be possible to delete a control by right-clicking into it and choosing Edit->Delete from the marking menu.
This is not possible when a different view has focus since in this case the menu entries are greyed out.
Steps to reproduce:
1) Open a Project of your choice.
2) Activate the "Properties" pane by clicking into a value field. For example: Width.
3) Right click onto a control in the "Navigator". Open the Edit sub-menu.
=> Delete, Cut and Copy is greyed out even so these Options should be available.
To perform a deletion on has to actively activate the Navigator by left-clicking into it.
Attachments
Issue Links
- relates to
-
QDS-41 Usability improvements - intuitive overall UX in Qt Quick Designer
-
- In Progress
-