QmlDesigner: Fix navigator context menu

Depending on the context and focus we are disabling actions.
But we did not enable actions when setting the focus/context
back to e.g. the navigator. We "simulate" a selection change
to set the proper state of the actions.

Task-number: QTCREATORBUG-19110
Change-Id: Ie4eefb498956de22d33d72bd7189bacd3177912b
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>