src/plugins/qmldesigner/components/componentcore/designeractionmanagerview.cpp
@@ -160,6 +160,11 @@ const DesignerActionManager &DesignerActionManagerView::designerActionManager() 
     return m_designerActionManager;
 }
 
+void DesignerActionManagerView::emitSelectionChanged()
+{
+    emit selectionChanged(!selectedModelNodes().isEmpty(), singleSelectedModelNode().isRootNode());
+}
+
 /* We should consider compressing this. */
 /* One update every 100ms should be enough. */
 void DesignerActionManagerView::setupContext()
